@@ -115,6 +115,8 @@ class Configuration
 	public $showDisallowedWords = false;
 	public $minBodySize = 0;
 	public $maxBodySize = 0;
+	public $maxSummaryLines = 0;
+	public $maxSummarySize = 0;
 	
 	public $subjectOrder = self::ORDER_DESCEND;
 	public $rateType = self::RATE_AVERAGE;
